samples/_failures_safe/1761493605_d9018a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbcda787.c: In function ‘main’:
./samples/SAFE/__tmp_fbcda787.c:142:12: error: missing terminating " character
  142 |     printf("Enter text to
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_fbcda787.c:142:5: error: expected expression at end of input
  142 |     printf("Enter text to
      |     ^~~~~~
./samples/SAFE/__tmp_fbcda787.c:142:5: error: expected declaration or statement at end of input
